--- a/templates/add_requests.html
+++ b/templates/add_requests.html
@@ -1,14 +1,27 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Request a Resource
+Request a Resource
 {% endblock title %}
 
 {% block content %}
-    <h3>Request Resource<h3>
-    <form method='POST'>
-        {% csrf_token %}
-        {% include 'form.html' %}
-        <button type='submit' id='submit' class='btn btn-primary'>Submit</button>
-    </form>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class='col-sm-2 col-md-2'></div>
+            <div class="col-sm-8 col-md-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Request Resource</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Fill this form to add a request</h6>
+                        <form method='POST'>
+                            {% csrf_token %}
+                            {% include 'form.html' %}
+                            <button type='submit' id='submit' class='card-link btn btn-primary'>Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class='col-sm-2 col-md-2'></div>
+        </div>
+    </div>
 {% endblock content %}
