--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
     {% block content %}{% endblock content %}
-    
     
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{% static 'js/popper.js' %}"></script>
