--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="{% url 'add_resource' %}">Add Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="{% url 'request_resources' %}" tabindex="-1">Request Resource</a>
+          <a class="nav-link" href="{% url 'request_resources' %}" tabindex="-1">Request Resource</a>
         </li>
       </ul>
       {% comment %} <form class="d-flex">
